# Kalix

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  VERSION  build-msi.bat  build-portable-zip.bat  build-portable-zip.sh  build.rs  bump-version.py  functions_prd.md  get_result_command_design.md  kalix_prd.md  update_version.py
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  housekeeping.md
.github/workflows/: checkout_test.yml  ci.yml  main.yml  release.yml
benchmarks/001_function_dispatch/: README.md  model.ini
docs/: compact-stdio-protocol-spec.md  data_references.md  get_result_command_design.md  linting_dev_plan.txt  node_references.md  sim_references.md  trailhead-path-spec-java.md  trailhead-path-spec.md  trailhead-paths-user-guide.md
docs/functions/: FUNCTIONS_DOCUMENTATION.md
examples/1_picnic_gr4j/: ForsCalibrate_2025.10.13_14.55.52.388.calib  calibration_from_frontend.ini  data_backward_dates.csv  data_obsflow.csv  data_twodays.csv  kalix.ini  picnic_gr4j.fors
examples/2_pioneer_val/: PioneerStoragesEstablished.csv  PioneerVal_to_125001b_withLocations.ini  bal.txt  marianestablished_constructioncommenced.csv
examples/3_calibrate_constants/: model.ini  model_optimised.ini  opt_config.ini
examples/4_user_variations/: user.ini  users_summary.html
examples/5_picnic_sac_fors/: ForsCalibrate_2024.12.11_14.16.34.210.calib  modelled_flow_2.csv  modelled_flow_flobf.csv  modelled_flow_floin.csv  modelled_flow_flosf.csv  modelled_flow_roimp.csv  picnic_crossing-calibrated.fors  picnic_crossing.fors  picnic_sacr.ini
examples/5_picnic_sacr/: optimised_de40000_sdeb76246.ini  optimised_sce40000_sdeb.ini
examples/6_looking_at_volume/: blarg.ini  blarg2.ini  looking_at_volume.ini
kalixgui/: CLAUDE.md  KALIXCLI_DOCUMENTATION.md  KALIX_CLI_STDIO_PROTOCOL.md  KalixCli-Integration-Framework.md  PROJECT_STATUS_REPORT.md  README.md  TEXT_EDITOR_ENHANCEMENT_PLAN.md  build.gradle.kts  flowviz_plan.md  initial_plan.txt  kalixcli-stdio-spec.md  sample_data.csv  settings.gradle.kts
kalixgui/example_models/: model_3_abs.ini
kalixide/: CLAUDE.md  CODE_QUALITY_REVIEW.md  DOCKING_README.md  KALIXCLI_DOCUMENTATION.md  KalixCli-Integration-Framework.md  OPTIMISATION_WINDOW_INTEGRATION.md  REFACTORING_CONTEXT.md  REFACTORING_FILES_SUMMARY.md  REFACTORING_PLAN_OPTIMISATION_WINDOW.md  VISUAL_GUIDE.md  build.gradle.kts  create-windows-icon.bat  kalixcli-stdio-spec.md  settings.gradle.kts
kalixide/docs/: FUNCTION_EXPRESSION_LINTING.md  KALIXCLI_DOCUMENTATION.md  PROJECT_STATUS_REPORT.md  SERIES_IDENTITY_DATAFLOW.md  context-menu-style.md  kalixcli-stdio-spec.md  multi-document-architecture.md
kalixide/editor_color_themes/: atom_one_light.json  github_light_colorblind.json
kalixide/example_models/: linked_model.ini  model_3_abs.ini  model_with_every_node_type.ini
kalixide/temp-old-properties-files/: botanical-theme.properties  finding-nemo-theme.properties  lapland-theme.properties  obsidian-theme.properties  temp-dracula-resolved.txt  temp-light-resolved.txt  temp-one-dark-resolved.txt
kalixpy/: Cargo.toml
kalixpy/src/: lib.rs  model.rs
manifestos/: README.md  identity-and-labels.md  on-manifestos.md  performance.md
prd/: kalix_prd.md
python/: .gitignore  Cargo.toml  README.md  pyproject.toml  run-tests.bat  tox.ini
python/python/kalix/: __init__.py  _native.pyi  io.py  opt.py  sim.py
python/src/: lib.rs
python/tests/: test_optimise.py  test_roundtrip.py
regression_tests/: CLAUDE.md  verify_all_models.py
regression_tests/1_picnic_gr4j/: kalix.ini  mbal_for_verification.txt
regression_tests/2_pioneer_val/: PioneerEvaporation.csv  PioneerVal_to_125001b_withLocations.ini  miraniestablished_constructioncommenced.csv
regression_tests/3_calibrate_constants/: mbal_for_verification.txt  model.ini
regression_tests/4_user_variations/: user.ini
regression_tests/5_model_with_every_node/: mask_1990s.csv  mbal_for_verification.txt
regression_tests/6_picnic_sacr/: picnic_sacr.ini
regression_tests/7_picnic_sacr_dmy/: rain_infilled.csv
regression_tests/simulations/: .gitignore  CLAUDE.md  README.txt  run_regression_tests.bat  run_regression_tests.sh  verify_all_models.py  verify_all_models_log.txt
src/: data_cache.rs  lib.rs  main.rs  model.rs  run.rs  timeseries.rs  timeseries_input.rs
src/data_management/: constants_cache.rs  data_cache.rs  mod.rs
src/functions/: ast.rs  errors.rs  evaluator.rs  functions.rs  mod.rs  operators.rs  parser.rs
src/hydrology/: mod.rs
src/io/: calibration_config_io.rs  csv_io.rs  custom_ini_parser.rs  ini_model_io.rs  kalix_path.rs  kaz_io.rs  kaz_io_example.rs  ksz_io.rs  mod.rs  optimisation_config_io.rs  pixie_io.rs  pixie_io_example.rs
src/misc/: cli_helpers.rs  componenet_identification.rs  configuration.rs  configuration_summary.rs  execution_order_method.rs  input_data_definition.rs  link_helper.rs  location.rs  misc_functions.rs  mod.rs  simulation_context.rs
src/model_inputs/: dynamic_input.rs  input_data_definition.rs  linear_combination.rs  mod.rs
src/nodes/: blackhole_node.rs  confluence_node.rs  diversion_node.rs  gauge_node.rs  gr4j_node.rs  inflow_node.rs  link.rs  loss_node.rs  mod.rs  node_enum.rs  node_trait.rs  order_constraint_node.rs  order_control_node.rs  rainfall_weights.rs  regulated_user_node.rs  routing_node.rs  sacramento_node.rs  splitter_node.rs  storage_node.rs  unregulated_user_node.rs  user_node.rs
src/numerical/: fifo_buffer.rs  interpolation.rs  mathfn.rs  mod.rs  table.rs  table_discontinuous.rs
src/ordering/: mod.rs  simple_nodewise_ordering.rs  simple_ordering.rs
src/perf/: benchmarks.rs
src/pybindings/: model.rs
src/terminal_plot/: mod.rs  optimisation_plot.rs  optimization_plot.rs
src/tests/: mod.rs  test_constants_cache.rs  test_csv_io.rs  test_dynamic_input.rs  test_fifo_buffer.rs  test_functions_integration.rs  test_gorilla.rs  test_gr4h_validation.rs  test_gr4h_variant.rs  test_gr4j_model.rs  test_helpers.rs  test_ini_document.rs  (+27 more)
utils_for_troubleshooting/: KalixIDE-Diagnostics.bat  clear-windows-icon-cache.bat
(+789 files in other folders)
