[package]
name = "kalix"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kalixpy" #note the wheel file will be named "kalix" per the package (i.e. "pip install kalix") but the python module will be called "kalixpy" (i.e. "import kalixpy as kx")
crate-type = ["cdylib"] # "cdylib" is necessary to produce a shared library for Python to import from.

[dependencies]
libm = "0.2.2"
serde = "1.0.143"
serde_derive = "1.0.143"
csv = "1"
rand = "0.8.5"
tsz = "0.1.4"
chrono = "0.4.38"
dyn-clone = "1.0"
ini = "1.3.0"
numpy = "0.13.0"

[dependencies.pyo3]
version = "0.23.1"
features = ["abi3-py38"] # "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]