[workspace]
members = ["kalixpy"]

[package]
name = "kalix"
version = "0.2.2"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "0.2.2"
serde = "1.0.143"
csv = "1"
rand = "0.8.5"
rayon = "1.10"
tsz = "0.1.4"
chrono = { version = "0.4.38", features = ["serde"] }
dyn-clone = "1.0"
clap = { version = "4", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "1.0"
base64 = "0.22"
rustc-hash = "2.0"
indexmap = "2.0"

[dependencies.pyo3]
version = "0.23.1"
features = [
    "abi3-py38",
] # "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
