[package]
name = "kalix-python"
version = "0.2.3.dev0"
edition = "2021"
description = "Python bindings for the Kalix hydrological modelling system"

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py39"] }
numpy = "0.21"
kalix = { path = ".." }
