[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "kalix"
version = "0.2.9"
description = "Python interface for Kalix: hydrological modelling and Pixie (Gorilla-compressed) timeseries I/O"
readme = "README.md"
requires-python = ">=3.9"
license = "MPL-2.0"
authors = [{ name = "Kalix contributors" }]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]
dependencies = [
    "numpy>=1.22",
    "pandas>=2.0",
]

[project.urls]
Homepage = "https://chasegan.notion.site/Kalix-User-Guide-762687200b564e8e8c82b4f98879974f"

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.maturin]
python-source = "python"
module-name = "kalix._native"
features = ["pyo3/extension-module"]
strip = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "tox>=4.30.3",
]
